[project]
name = "agentbeats"
version = "0.1.0"
description = "AgentBeats SDK for building security-contest AI agents"
requires-python = ">=3.9"
dependencies = ["tomli>=2", 
                "fastmcp", 
                "fastapi", 
                "uvicorn", 
                "httpx"]

[project.scripts]
agentbeats = "agentbeats.cli:main" # Entry point for the CLI, supporting cmd like "agentbeats run_agent ..."
